# evix

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: nix-vm-tests.yml
bench/: README.md  bench.sh  equiv.sh  fixture.nix  results.md
crates/evix/: Cargo.toml  build.rs
crates/evix-cli/: Cargo.toml
crates/evix-cli/src/: args.rs  main.rs
crates/evix-cli/tests/: eval.rs
crates/evix-daemon/: Cargo.toml
crates/evix-daemon/src/: connection_limit.rs  lib.rs  session_cache.rs  tests.rs
crates/evix-protocol/: Cargo.toml
crates/evix-protocol/src/: lib.rs  serde_config.rs
crates/evix/schema/: worker.capnp
crates/evix/src/: async_master.rs  config.rs  error.rs  eval.rs  lib.rs  remote_proto.rs  remote_worker.rs  run.rs  session.rs  watch.rs  worker.rs  worker_config.rs  worker_process.rs
crates/evix/src/async_master/: tests.rs
crates/evix/tests/: session.rs
nix/: module.nix  package.nix  shell.nix
nix/tests/: eval.nix
src/: eval.rs  main.rs  master.rs  worker.rs
