[package]
name                   = "evix-protocol"
description            = "Daemon JSON protocol and shared wire types for evix"
edition.workspace      = true
version.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
